[Code Commits] Added Pandas processing
I've added some code to compute the metrics with Pandas,
because I think that's easier to understand if you know about Pandas.

Metrics computed (and results) should be exactly the same.

--- a/examples/Code_Commits.ipynb
+++ b/examples/Code_Commits.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +101,8 @@
     }
    ],
    "source": [
+    "import json\n",
+    "\n",
     "commits = {}\n",
     "with open('git-commits.json') as commits_file:\n",
     "    for line in commits_file:\n",
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -259,8 +261,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -283,11 +287,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Buckets and filters, using pandas\n",
+    "\n",
+    "Now, let's use pandas for some advanced study of buckets and filters that may be of interest.\n",
+    "\n",
+    "In the command line, install pandas:\n",
+    "\n",
+    "```\n",
+    "$ pip install pandas\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import datetime\n",
+    "import pandas as pd\n",
+    "\n",
+    "commits_summary = []\n",
+    "for commit in commits.values():\n",
+    "    summary = {\n",
+    "        'hash': commit['data']['commit'],\n",
+    "        'author': commit['data']['Author'],\n",
+    "        'author_date': datetime.datetime.strptime(commit['data']['AuthorDate'],\n",
+    "                                                \"%a %b %d %H:%M:%S %Y %z\"),\n",
+    "        'commit': commit['data']['Commit'],\n",
+    "        'commit_date': datetime.datetime.strptime(commit['data']['CommitDate'],\n",
+    "                                                \"%a %b %d %H:%M:%S %Y %z\"),\n",
+    "        'files_no': len(commit['data']['files'])\n",
+    "    }\n",
+    "    actions = 0\n",
+    "    for file in commit['data']['files']:\n",
+    "        if 'action' in file:\n",
+    "            actions += 1\n",
+    "    summary['files_action'] = actions\n",
+    "    if 'Merge' in commit['data']:\n",
+    "        summary['merge'] = True\n",
+    "    else:\n",
+    "        summary['merge'] = False\n",
+    "    if commit['data']['commit'] in master:\n",
+    "        summary['master'] = True\n",
+    "    else:\n",
+    "        summary['master'] = False        \n",
+    "    commits_summary.append(summary)\n",
+    "\n",
+    "    commits_df = pd.DataFrame(commits_summary)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute metrics from the data frame\n",
+    "\n",
+    "Now, let's repeat the computation, but using the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of commits: 335\n",
+      "Code Commits (naive): 335\n",
+      "Code Commits (non-empty): 326\n",
+      "Code Commits (non-merge): 324\n",
+      "Code Commits (master branch): 245\n",
+      "Code Commits (non-empty in master branch): 237\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total number of commits:\", len(commits_df.index))\n",
+    "\n",
+    "print(\"Code Commits (naive):\", len(commits_df.index))\n",
+    "\n",
+    "print(\"Code Commits (non-empty):\", len(commits_df[commits_df['files_action']>0].index))\n",
+    "\n",
+    "print(\"Code Commits (non-merge):\", len(commits_df[commits_df['merge']==False].index))\n",
+    "\n",
+    "print(\"Code Commits (master branch):\", len(commits_df[commits_df['master']==True].index))\n",
+    "\n",
+    "print(\"Code Commits (non-empty in master branch):\",\n",
+    "     len(commits_df[(commits_df['files_action']>0) & (commits_df['master']==True)].index))"
+   ]
   }
  ],
  "metadata": {
