Add some info about how to run notebooks.

--- a/examples/Code_Commits.ipynb
+++ b/examples/Code_Commits.ipynb
@@ -40,18 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Commits read: 335\n"
+      "Commits read: 345\n"
      ]
     }
    ],
    "source": [
+    "import json\n",
     "from perceval.backends.core.git import Git\n",
     "\n",
     "# url for the git repo to analyze (uncomment the line you want to analyze)\n",
@@ -382,6 +383,30 @@
     "\n",
     "print(\"Code Commits (non-empty in master branch):\",\n",
     "     len(commits_df[(commits_df['files_action']>0) & (commits_df['master']==True)].index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'commits_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-d1c9c7e0a618>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m by_month = commits_df['author_date']     .groupby([commits_df.author_date.dt.year,\n\u001b[0m\u001b[1;32m      2\u001b[0m             commits_df.author_date.dt.month]) \\\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'count'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'commits_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "by_month = commits_df['author_date'] \\\n",
+    "    .groupby([commits_df.author_date.dt.year,\n",
+    "            commits_df.author_date.dt.month]) \\\n",
+    "    .agg('count')\n"
    ]
   }
  ],
