Update notebook so it is fully computed.

--- a/examples/Code_Commits.ipynb
+++ b/examples/Code_Commits.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of commits: 335\n"
+      "Total number of commits: 345\n"
      ]
     }
    ],
@@ -125,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Code Commits (naive): 335\n"
+      "Code Commits (naive): 345\n"
      ]
     }
    ],
@@ -152,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Code Commits (non-empty): 326\n"
+      "Code Commits (non-empty): 336\n"
      ]
     }
    ],
@@ -185,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Code Commits (non-merge): 324\n"
+      "Code Commits (non-merge): 334\n"
      ]
     }
    ],
@@ -216,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Code Commits (master branch): 245\n"
+      "Code Commits (master branch): 250\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Code Commits (non-empty in master branch): 237\n"
+      "Code Commits (non-empty in master branch): 242\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,10 @@
     "        summary['master'] = False        \n",
     "    commits_summary.append(summary)\n",
     "\n",
-    "    commits_df = pd.DataFrame(commits_summary)\n"
+    "    commits_df = pd.DataFrame(commits_summary)\n",
+    "    commits_df['author_date'] = pd.to_datetime(commits_df['author_date'], utc=True)\n",
+    "    commits_df['commit_date'] = pd.to_datetime(commits_df['commit_date'], utc=True)\n",
+    "\n"
    ]
   },
   {
@@ -352,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -361,12 +364,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of commits: 335\n",
-      "Code Commits (naive): 335\n",
-      "Code Commits (non-empty): 326\n",
-      "Code Commits (non-merge): 324\n",
-      "Code Commits (master branch): 245\n",
-      "Code Commits (non-empty in master branch): 237\n"
+      "Total number of commits: 345\n",
+      "Code Commits (naive): 345\n",
+      "Code Commits (non-empty): 336\n",
+      "Code Commits (non-merge): 334\n",
+      "Code Commits (master branch): 250\n",
+      "Code Commits (non-empty in master branch): 242\n"
      ]
     }
    ],
@@ -387,27 +390,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'commits_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-d1c9c7e0a618>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m by_month = commits_df['author_date']     .groupby([commits_df.author_date.dt.year,\n\u001b[0m\u001b[1;32m      2\u001b[0m             commits_df.author_date.dt.month]) \\\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'count'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'commits_df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "year  month\n",
+       "2016  8        22\n",
+       "      9        23\n",
+       "      10       45\n",
+       "      11       11\n",
+       "      12        1\n",
+       "2017  1        16\n",
+       "      2         3\n",
+       "      3         1\n",
+       "      4        35\n",
+       "      5        12\n",
+       "      6         8\n",
+       "      7        36\n",
+       "      8        36\n",
+       "      9        14\n",
+       "      10        7\n",
+       "      11        6\n",
+       "      12       11\n",
+       "2018  1        15\n",
+       "      2         7\n",
+       "      3         5\n",
+       "      4        14\n",
+       "      5        17\n",
+       "Name: author_date, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "by_month = commits_df['author_date'] \\\n",
-    "    .groupby([commits_df.author_date.dt.year,\n",
-    "            commits_df.author_date.dt.month]) \\\n",
-    "    .agg('count')\n"
+    "    .groupby([commits_df.author_date.dt.year.rename('year'),\n",
+    "              commits_df.author_date.dt.month.rename('month')]) \\\n",
+    "    .agg('count')\n",
+    "by_month"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
