[implementations] Simplyifying version of the notebook
Perceval now has an option for generating a file with a JSON
document per item, stored in a single line. Let's us it.

--- a/implementations/Code_Commits.ipynb
+++ b/implementations/Code_Commits.ipynb
@@ -35,44 +35,16 @@
    "source": [
     "## Retrieving data from the data source\n",
     "\n",
-    "First, run some Perceval code on a repository to produce a file with JSON documents for all its commits, one per line (`git-commits.json`). In this case we will use the Perceval git repository: change it to get data from your preferred repo."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Commits read: 345\n"
-     ]
-    }
-   ],
-   "source": [
-    "import json\n",
-    "from perceval.backends.core.git import Git\n",
+    "First, from the command line run Perceval on a repository to produce a file with JSON documents for all its commits, one per line (`git-commits.json`). In this case we will use the Perceval git repository: change it to get data from your preferred repo (for example, you can use `https://github.com/elastic/elasticsearch-docker` or `https://github.com/git/git`):\n",
     "\n",
-    "# url for the git repo to analyze (uncomment the line you want to analyze)\n",
-    "#repo_url = 'http://github.com/chaoss/grimoirelab-perceval'\n",
-    "repo_url = 'https://github.com/elastic/elasticsearch-docker'\n",
-    "#repo_url = 'https://github.com/git/git.git'\n",
-    "# directory for letting Perceval clone the git repo (make sure it is empty)\n",
-    "repo_dir = '/tmp/git_repo'\n",
-    "\n",
-    "# create a Git object, pointing to repo_url, using repo_dir for cloning\n",
-    "repo = Git(uri=repo_url, gitpath=repo_dir)\n",
-    "\n",
-    "number = 0\n",
-    "with open('git-commits.json', 'w') as commits_file:\n",
-    "    # fetch all commits as an iterator, and dump them to a file, one per line\n",
-    "    for commit in repo.fetch():\n",
-    "        json.dump(commit, commits_file)\n",
-    "        commits_file.write('\\n')\n",
-    "        number += 1\n",
-    "print(\"Commits read:\", number)"
+    "```\n",
+    "$ perceval git --json-line http://github.com/chaoss/grimoirelab-perceval > git-commits.json\n",
+    "[2019-01-23 14:39:12,730] - Sir Perceval is on his quest.\n",
+    "[2019-01-23 14:39:12,732] - Fetching commits: 'https://github.com/chaoss/governance' git repository from 1970-01-01 00:00:00+00:00 to 2100-01-01 00:00:00+00:00; all branches\n",
+    "[2019-01-23 14:39:13,340] - Fetch process completed: 345\n",
+    "commits fetched\n",
+    "[2019-01-23 14:39:13,340] - Sir Perceval completed his quest.\n",
+    "```"
    ]
   },
   {
@@ -81,16 +53,12 @@
    "source": [
     "Now, let's prepare a dictionary, `commits`, with all commits retrieved,\n",
     "by reading the file we just produced.\n",
-    "This will be the one we will use in the computing of the metrics, later.\n",
-    "\n",
-    "We do it this way, instead of directly producing the dictionary from\n",
-    "the output by Perceval, because that allows you, to easily start from the\n",
-    "dumped file, if you don't want to run Perceval."
+    "This will be the one we will use in the computing of the metrics, later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5rc1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
