pass sort=True to df.append() to avoid warning

--- a/implementations/Code_Changes-Git.ipynb
+++ b/implementations/Code_Changes-Git.ipynb
@@ -130,7 +130,7 @@
     "                commit = json.loads(line)\n",
     "                commits.append(self._summary(repo=commit['origin'],\n",
     "                                             cdata=commit['data']))\n",
-    "        self.df = self.df.append(commits)\n",
+    "        self.df = self.df.append(commits, sort=True)\n",
     "        self.df['author_date'] = pd.to_datetime(self.df['author_date'], utc=True)\n",
     "        self.df['commit_date'] = pd.to_datetime(self.df['commit_date'], utc=True)\n",
     "        \n",
