[implementations] Refactor code, improve docstrings
Signed-off-by: pranjal.aswani <pranjal.aswani@halodoc.com>

--- a/implementations/notebooks_df/code_changes_git.ipynb
+++ b/implementations/notebooks_df/code_changes_git.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "sourcecode = IsSourceCode(algorithm_class=Naive)\n",
-    "items = utils.read_JSON_file('../git-commits.json')"
+    "items = utils.read_json_file('../git-commits.json')"
    ]
   },
   {
