fix imports in Reviews Declined notebook
This patch updates imports in the Reviews Declined
notebook.
 
Signed-off-by: Aniruddha Karajgi <akarajgi0@gmail.com>

--- a/implementations/notebooks_df/reviews_declined_github.ipynb
+++ b/implementations/notebooks_df/reviews_declined_github.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As discussed in the [README](../README.md) file, the scripts required to analyze the data fetched by Perceval are located in the `code_df` package. Due to python's import system, to import modules from a package which is not in the current directory, we have to either add the package to `PYTHONPATH` or simply append a `..` to `sys.path`, so that `code_df` can be successfully imported. "
+    "As discussed in the [README](../README.md) file, the scripts required to analyze the data fetched by Perceval are located in the `code_df` package. Due to python's import system, to import modules from a package which is not in the current directory, we have to either add the package to `PYTHONPATH` or simply append a `../..` to `sys.path`, so that `code_df` can be successfully imported. "
    ]
   },
   {
@@ -38,12 +38,13 @@
    "source": [
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
     "import sys\n",
-    "sys.path.append('..')\n",
-    "from code_df import utils\n",
-    "from code_df import conditions\n",
-    "from code_df.pullrequest_github import PullRequestGitHub\n",
-    "%matplotlib inline"
+    "sys.path.append('../..')\n",
+    "\n",
+    "from implementations.code_df.utils import read_json_file\n",
+    "from implementations.code_df.pullrequest_github import PullRequestGitHub"
    ]
   },
   {
@@ -124,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "items = utils.read_json_file('../pull_requests.json')"
+    "items = read_json_file('../pull_requests.json')"
    ]
   },
   {
@@ -176,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Computing the number of accepted reviews over regular time intervals\n",
+    "## Computing the number of declined reviews over regular time intervals\n",
     "Using the `time_series` method, it is possible to compute the number of reviews declined every month, every week or any valid pandas timeseries period. This kind of analysis is useful in finding trends over time, as we will see in the cell below.\n",
     "\n",
     "Let's perform a basic analysis: lets see the change in the number of reviews declined, between the same dates we used above on a weekly basis: 2018-01-01 and 2018-07-01. \n",
